--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -1,6 +1,6 @@
 /*Body-background*/
 body{
-    background-image: url('./back.jpg');
+    background-image: url('./back1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -14,19 +14,29 @@ body{
 }
 #add_course,button{
     border-radius: 1.25rem !important;
+    
 }
 /*Button-AddCourse*/
 
 /*Alterations*/
 .badge{
-    font-size: unset;
+    font-size: 2em;
+    margin: 20px;
+    border-radius: 1.25rem;
 }
 .card{
-    background-color: unset;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 1.25rem !important;
     width: 18rem;
-    flex:unset;
+    flex:unset !important;
+    
 }
 .cards{
     width: unset !important;
+    justify-content: center;
+}
+
+table{
+    color: white;
 }
 /*Alterations*/
